# parametric-cloth

./: .gitignore  README.md  parametric-cloth-pipeline-final.md  pyproject.toml
examples/: 01_pattern_basics.py  02_drape_preview.py  03_pca_variants.py  04_runtime_customization.py  05_differentiable_fitting.py  06_fabric_and_pattern_ai.py  07_garment_on_body.py  README.md
scripts/: batch_simulate.py  build_pca_basis.py  fit_pattern.py  generate_pattern.py  generate_training_data.py  predict_fabric.py  simulate_garment.py  train_deformation.py  verify_landmarks.py
src/parametric_cloth/: __init__.py  cli.py  customization.py  envcheck.py  fabric.py  pattern.py  preview.py  serialization.py  templates.py  viz.py
src/parametric_cloth/ai_pattern/: __init__.py  garmentcode.py  generator.py  refine.py
src/parametric_cloth/avatar/: __init__.py  body.py  landmarks.py  mesh.py  placement.py  segments.py  shapes.py  synthetic.py
src/parametric_cloth/deformation/: __init__.py  dataset.py  model.py  poses.py  runtime.py  train.py
src/parametric_cloth/engine/: __init__.py  deformer.py  garment.py  masking.py  profiling.py  texture.py  wardrobe.py
src/parametric_cloth/fabric_ai/: __init__.py  predictor.py  presets.py
src/parametric_cloth/fitting/: __init__.py  chamfer.py  fitter.py  mass_spring.py  optim.py  rendering.py
src/parametric_cloth/postprocess/: __init__.py  blender_post.py  layout.py  metadata.py  uv.py
src/parametric_cloth/simulation/: __init__.py  assembly.py  blender_sim.py  config.py  seams.py  tessellate.py  validate.py  weld.py
src/parametric_cloth/variants/: __init__.py  blendshapes.py  library.py  pca.py  sampling.py
tests/: test_ai_pattern.py  test_avatar.py  test_cli.py  test_deformation.py  test_engine.py  test_envcheck.py  test_fabric.py  test_fabric_ai.py  test_fitting_chamfer.py  test_fitting_fitter.py  test_fitting_mass_spring.py  test_fitting_optim.py  test_fitting_rendering.py  test_postprocess.py  test_preview.py  test_preview_garment_on_body.py  test_serialization.py  test_simulation.py  test_synthetic.py  test_templates.py  test_variants.py  test_viz.py  test_weld.py
